--- a/project/src/app/about/about.component.html
+++ b/project/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about_content">
-  <h1><a>About</a>/></h1>
+  <h1 class="content_name"><a>About</a>/></h1>
   <div class="code_box">
     <div class="code_rows">
       <span class="brackets">{{ "{" }}</span>
@@ -47,7 +47,7 @@
     <div class="code_rows">
       <span class="module" style="margin-left: 2.4rem">"2022-now":</span>
       <span class="object"
-        >"International Black Sea University computer science, second
+        >"International Black Sea University computer science, II
         course.",</span
       >
     </div>
