--- a/project/src/app/start/start.component.css
+++ b/project/src/app/start/start.component.css
@@ -9,7 +9,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  /* align-items: center; */
 }
 .start_box {
   font-family: var(--main_font);
@@ -20,22 +19,20 @@
 }
 .start_box div h1 {
   font-weight: 100;
-  /* font-size: 1.375rem; */
+  font-size: 2.5rem;
   color: var(--font_color);
 }
 .start_box div h2 {
   font-weight: 100;
+  font-size: 2rem;
   color: var(--font_color);
 }
 .start_box div span {
-  color: var(--code_elem_color);
-}
-.start_box div h2 span {
   font-family: "Poppins", sans-serif;
   font-style: italic;
   font-weight: 100;
-  color: var(--font_color);
 }
+
 .start_box div p {
   font-weight: 100;
   color: var(--font_color);
@@ -52,5 +49,30 @@
 @media (max-width: 1024px) {
   .start_content {
     padding: 2rem;
+  }
+}
+@media (max-width: 768px) {
+  .start_box div {
+    padding: 0 1rem;
+  }
+  .start_box div h1 {
+    font-size: 2rem;
+  }
+  .start_box div h2 {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 425px) {
+  .start_content {
+    padding: 1rem;
+  }
+  .start_box div h1 {
+    font-size: 1.5rem;
+  }
+  .start_box div h2 {
+    font-size: 1.125rem;
+  }
+  .start_box div p {
+    font-size: 0.75rem;
   }
 }
