--- a/project/src/app/start/start.component.html
+++ b/project/src/app/start/start.component.html
@@ -3,7 +3,7 @@
     <h1 class="content_name"><a href="">Start</a>></h1>
     <div>
       <h1>Hi there, my name is <span>Vaska Zardiashvili</span></h1>
-      <h2>Front-End <span>developer</span></h2>
+      <h2>Front-End developer</h2>
       <p>Lets see more about me...</p>
     </div>
   </div>
