--- a/project/src/app/about/about.component.css
+++ b/project/src/app/about/about.component.css
@@ -7,15 +7,6 @@
   background-color: var(--content_bg_color);
   position: relative;
 }
-.about_content::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 12px;
-  top: 0;
-  left: 0;
-  background: linear-gradient(to top, transparent, var(--bg_color) 100%);
-}
 
 .code_box {
   padding: 0 4rem;
@@ -24,7 +15,6 @@
 }
 .code_rows {
   color: white;
-  font-size: 1rem;
   padding: 0.3rem 0;
   display: flex;
   gap: 1rem;
@@ -46,7 +36,6 @@
 }
 .bracketsBlue {
   color: rgb(70, 112, 250);
-  /* font-size: 1.125rem; */
 }
 .bracketsPurple {
   color: rgb(211, 6, 211);
@@ -153,5 +142,21 @@
 @media (max-width: 1024px) {
   .about_content {
     padding: 2rem;
+  }
+}
+@media (max-width: 768px) {
+  .code_box {
+    padding: 0 1rem;
+  }
+}
+@media (max-width: 425px) {
+  .about_content {
+    padding: 1rem;
+  }
+  .brackets,
+  .module,
+  .object,
+  .number {
+    font-size: 0.75rem;
   }
 }
