--- a/project/src/app/lab/lab.component.html
+++ b/project/src/app/lab/lab.component.html
@@ -37,16 +37,20 @@
             >
             <img src="/assets/SiteLogoN6.png" alt="" />
           </li>
+          <li (mouseenter)="linkMouseEnter(7)" (mouseleave)="linkMouseLeave()">
+            <a href="https://versalo.vercel.app">Car sell&buy site</a>
+            <img src="/assets/SiteLogoN7.png" alt="" />
+          </li>
         </div>
       </ul>
       <ul>
         <h1>Games</h1>
         <div class="lab_links">
-          <li (mouseenter)="linkMouseEnter(7)" (mouseleave)="linkMouseLeave()">
+          <li (mouseenter)="linkMouseEnter(8)" (mouseleave)="linkMouseLeave()">
             <a href="https://zzzwordli.netlify.app/">Wordli Puzzle Game</a>
             <img src="/assets/GameLogoN1.png" alt="" />
           </li>
-          <li (mouseenter)="linkMouseEnter(8)" (mouseleave)="linkMouseLeave()">
+          <li (mouseenter)="linkMouseEnter(9)" (mouseleave)="linkMouseLeave()">
             <a href="https://englishquiz-game.netlify.app/"
               >English Grammar Quiz Game</a
             >
