--- a/project/src/app/lab/lab.component.html
+++ b/project/src/app/lab/lab.component.html
@@ -56,7 +56,7 @@
           </li>
           <li (mouseenter)="linkMouseEnter(10)" (mouseleave)="linkMouseLeave()">
             <a href="https://englishquiz-game.netlify.app/"
-              >English Grammar Quiz Game</a
+              >English Quiz Game</a
             >
             <img src="/assets/GameLogoN2.png" alt="" />
           </li>
