--- a/project/src/app/about/about.component.html
+++ b/project/src/app/about/about.component.html
@@ -90,10 +90,28 @@
       </span>
     </div>
     <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "HTML/CSS/JS",</span>
+      <span style="margin-left: 1rem" class="object"> "HTML5",</span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object"> "CSS3",</span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object"> "Javascript",</span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object"> "Typescript",</span>
     </div>
     <div class="code_rows">
       <span style="margin-left: 1rem" class="object"> "Angular",</span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object"> "Firebase",</span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object"> "Ngrx",</span>
+    </div>
+    <div class="code_rows">
+      <span style="margin-left: 1rem" class="object"> "Rxjs",</span>
     </div>
     <div class="code_rows">
       <span style="margin-left: 1rem" class="object"> "Rest API",</span>
@@ -102,22 +120,25 @@
       <span style="margin-left: 1rem" class="object"> "JSON",</span>
     </div>
     <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "TypeScript",</span>
+      <span style="margin-left: 1rem" class="object"> "c++",</span>
     </div>
     <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Firebase",</span>
+      <span style="margin-left: 1rem" class="object"> "Algorithms",</span>
+    </div>
+    <div class="code_rows">
+      <span class="bracketsPurple">{{ "]," }}</span>
+    </div>
+    <div class="code_rows">
+      <span class="module"> "Additional skills":</span>
+      <span class="bracketsPurple">
+        {{ "[" }}
+      </span>
     </div>
     <div class="code_rows">
       <span style="margin-left: 1rem" class="object"> "PHP",</span>
     </div>
     <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "UX/UI",</span>
-    </div>
-    <div class="code_rows">
       <span style="margin-left: 1rem" class="object"> "c++",</span>
-    </div>
-    <div class="code_rows">
-      <span style="margin-left: 1rem" class="object"> "Algorithms",</span>
     </div>
     <div class="code_rows">
       <span style="margin-left: 1rem" class="object"> "Blender",</span>
