--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -69,7 +69,7 @@
           <li>
             <i class="fa-brands fa-facebook"></i
             ><a href="https://www.facebook.com/vasiko.zardiashvili.5"
-              >vasiko.zardiashvili.5</a
+              >vaska.zardiashvili</a
             >
           </li>
           <li>
