--- a/project/src/app/start/start.component.html
+++ b/project/src/app/start/start.component.html
@@ -1,6 +1,6 @@
 <div class="start_content">
   <div class="start_box">
-    <h1 class="content_name"><a href="">Start</a>></h1>
+    <h1 class="content_name"><a>Start</a>></h1>
     <div>
       <h1>Hi there, my name is <span>Vaska Zardiashvili</span></h1>
       <h2>Front-End developer</h2>
